Changed to be 1.4 compatible
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@1484 961051c9-f516-0410-bf72-c9f7e237a7b7